--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body
 {
-margin: auto;
+margin: 0;
 padding: 0;
 background: #ffffff;
 }
@@ -11,41 +11,37 @@ h1{
 }
 button
 {
+    margin: auto;
     position: absolute;
+    width: 50%;
+    min-width: 400px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: auto;
     outline: none;
     border: none;
-    font-size: 81px;
+    font-size: 40px;
     text-transform: uppercase;
     background-color: white;
+    cursor: auto;
 }
 
 button:hover{
     margin: auto;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: auto;
-    outline: none;
-    border: none;
-    font-size: 81px;
-    text-transform: uppercase;
-    animation: draaien 2s infinite;
-}
-button:active{
     position: absolute;
+    width: 50%;
+    min-width: 400px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: auto;
     outline: none;
     border: none;
-    font-size: 90px;
+    font-size: 42px;
     text-transform: uppercase;
-    animation: draaien;
+    animation: draaien 10s infinite;
+    cursor: pointer;
 
 }
 p{
