--- a/index.css
+++ b/index.css
@@ -1,26 +1,29 @@
 body
 {
-margin: 0;
+
+margin: auto;
 padding: 0;
-background: #ffffff;
+background: #cdcdcd;
 }
 
 h1{
     text-align: center;
+    text-shadow: 1px 1px 6px white;
 
 }
 button
 {
+    border-color: #000000;
+    border-width: 2px;
+    border-radius: 8px;
     margin: auto;
     position: absolute;
     width: 50%;
-    min-width: 400px;
+    min-width: 350px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: auto;
-    outline: none;
-    border: none;
     font-size: 40px;
     text-transform: uppercase;
     background-color: white;
@@ -28,21 +31,17 @@ button
 }
 
 button:hover{
-    margin: auto;
-    position: absolute;
-    width: 50%;
-    min-width: 400px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: auto;
-    outline: none;
-    border: none;
-    font-size: 42px;
-    text-transform: uppercase;
+    
     animation: draaien 10s infinite;
     cursor: pointer;
 
+}
+div{
+    display: table;
+    margin: 0 auto;
+    border: 2px solid black;
+    border-radius: 6px;
+    background-color: white;
 }
 p{
     text-align: center;
